# forum

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  composer.json  docker-compose.yaml  file.html  index.html  index.php  test.html
Templates/: about.twig  base.twig  blog.twig  index.twig  not-found.twig  post.twig  postform.twig  report.twig  user-login.twig  user-registration.twig
config/: DBTest.php  di.php  init.sql  petos_db.sql  procedures.sql  schema.sql
css/: base.css  movetext.css
docker/: app.Dockerfile  db.Dockerfile
forum-rs/: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  MIGRATION_SUMMARY.md  README.md  SAILFISH_FIXES.md  TEMPLATE_UPDATE.md  docker-compose.yml  setup.sh  test_templates.sh  validate.sh
forum-rs/src/: lib.rs
forum-rs/src/handlers/: auth.rs  comments.rs  mod.rs  pages.rs  posts.rs  user.rs
forum-rs/src/middleware/: auth.rs  mod.rs
forum-rs/src/models/: attachment.rs  comment.rs  mod.rs  post.rs  role.rs  tag.rs  user.rs
forum-rs/src/templates/: auth.rs  comments.rs  mod.rs  pages.rs  posts.rs  user.rs
forum-rs/src/utils/: file_upload.rs  mod.rs
forum-rs/static/css/: movetext.css
forum-rs/templates/: CommentEditor.stpl  CreateNewPosts.stpl  DeleteComments.stpl  DeletePost.stpl  LeaderKarma.stpl  PersonalCabinet.stpl  PostEditor.stpl  SelectAvatar.stpl  UserEditor.stpl  about.stpl  admin.stpl  index.stpl  not-found.stpl  post.stpl  report.stpl  user-login.stpl  user-registration.stpl
k8s/: mysql-deployment.yaml  mysql-pvc.yaml  namespace.yaml  php-app-deployment.yaml  (+1 more)
(+41 files in other folders)
