[package]
name = "forum-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forum"
path = "bin/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tower-sessions = { version = "0.12", features = ["signed"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono", "migrate"] }

# Template engine
sailfish = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Password hashing
bcrypt = "0.15"

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for session keys
uuid = { version = "1.0", features = ["v4", "serde"] }

# Form parsing
axum-extra = { version = "0.9", features = ["form"] }

# File upload
mime = "0.3"
bytes = "1.0"
